--- a/messenger/website/templates/base.html
+++ b/messenger/website/templates/base.html
@@ -33,10 +33,10 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('index') }}">Home</a>
           </li>
-          {% if session['user'] %}
+          {% if session['user_id'] %}
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              {{ session['user'].display_name }}
+              {{ g.user.display_name }}
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('account.logout') }}">Log Out</a>
