--- a/messenger/website/templates/base.html
+++ b/messenger/website/templates/base.html
@@ -42,6 +42,9 @@
               <a class="dropdown-item" href="{{ url_for('account.logout') }}">Log Out</a>
             </div>
           </li>
+          <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('messages') }}">Messages</a>
+          </li>
           {% else %}
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('account.signup') }}">Signup</a>
