--- a/messenger/website/templates/account/password_reset.html
+++ b/messenger/website/templates/account/password_reset.html
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
-      <h2>Login</h2>
+      <h2>Password Reset</h2>
     </div>
   </div>
   {% include "error.html" %}
@@ -14,10 +14,6 @@
         <div class="form-group">
           <label for="email">Email address</label>
           <input name="email" type="email" class="form-control" aria-describedby="email-help" placeholder="john.doe@nyu.edu">
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input name="password" type="password" class="form-control" id="password" placeholder="************">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
