--- a/messenger/website/templates/account/signup.html
+++ b/messenger/website/templates/account/signup.html
@@ -9,6 +9,7 @@
       <h2>Signup</h2>
     </div>
   </div>
+  {% include "error.html" %}
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
       <form method='POST' autocomplete="off">
