--- a/messenger/website/templates/base.html
+++ b/messenger/website/templates/base.html
@@ -8,13 +8,16 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
+  <!-- Custom CSS -->
+  <link rel="stylesheet" type="text/css" href="./static/dist/css/styles.css">
+
   <!-- Vendor Templates -->
   <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css?family=Lora:700i" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
-
+  <link href="{{ url_for('static', filename='dist/js/styles.bundle.js') }}" rel="stylesheet" type="text/css">
   {% block css %}
   {% endblock %}
 </head>
